# CTkTableData

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
CTkDataTable/: __init__.py  _utils.py  ctk_data_table.py  table_column.py  table_events.py  table_model.py  table_renderer.py  table_style.py
CTkDataTable/examples/: __init__.py  basic_table.py  ncr_records.py
docs/: Docs.html  Docs.md
tests/: __init__.py  test_ctk_data_table_gui.py  test_table_column.py  test_table_model.py  test_table_renderer.py  test_table_style.py  test_utils.py
