[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CTkDataTable"
version = "0.1.0"
description = "A virtualized data table widget for CustomTkinter applications."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["customtkinter", "tkinter", "table", "datagrid", "widgets"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["customtkinter>=5.2"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["CTkDataTable*"]

[tool.setuptools.package-data]
CTkDataTable = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
